@@ -4,34 +4,31 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
+/** [93. Restore IP Addresses](https://leetcode.com/problems/restore-ip-addresses) */
 public class RestoreIpAddresses {
 	public List<String> restoreIpAddresses(String s) {
 		return solve(0, "", 0, s);
 	}
 
-	private static List<String> solve(int idx, String acc, int intCount, String s) {
-		if (intCount > 4) {
+	private static List<String> solve(int idx, String acc, int segCount, String s) {
+		if (segCount > 4) {
 			return Collections.emptyList();
 		}
-		if (intCount == 4 && idx == s.length()) {
-			return List.of(acc);
+		if (idx == s.length()) {
+			return segCount == 4 ? List.of(acc) : Collections.emptyList();
 		}
 		final var result = new ArrayList<String>();
 		for (var i = 1; i <= 3 && idx + i <= s.length(); i++) {
-			var sub = s.substring(idx, idx + i);
-			if (isValid(sub)) {
-				result.addAll(solve(idx + i, acc + sub + ((intCount == 3) ? "" : "."), intCount + 1, s));
+			var seg = s.substring(idx, idx + i);
+			if (isValid(seg)) {
+				result.addAll(solve(idx + i, acc + seg + ((segCount == 3) ? "" : "."), segCount + 1, s));
 			}
 		}
 		return result;
 	}
 
-	private static boolean isValid(String sub) {
-		if (sub.length() > 1 && sub.startsWith("0")) {
-			return false;
-		}
-		var value = Integer.parseInt(sub);
-		return value <= 255;
+	private static boolean isValid(String segment) {
+		return !(segment.length() > 1 && segment.startsWith("0")) && Integer.parseInt(segment) <= 255;
 	}
 
 	static void main() {
